Update pdfsam.sh