@@ -1,16 +1,26 @@
 #!/bin/bash
-. /links/bin/bkp_functions.sh
-determineDistribution
-java_env open
-######## CONFIGURATION OPTIONS ########
-#JAVA_PROGRAM_DIR="/etc/alternatives/java_sdk_1.5.0/bin/"	
-JAVA_PROGRAM_DIR="/usr/lib/jvm/java-10-openjdk-10.0.2.13-7.fc29.x86_64/bin/"	
-JAVA_PROGRAM_DIR="/home/share/oracle-jdk/jdk/bin/"
-export PATH_TO_FX="/home/share/oracle-jdk/javafx-sdk/lib"
-PROGRAM_DIR="/home/share/pdfsam"	# use full path to Azureus bin dir
-cd ${PROGRAM_DIR}
-STARTJAR_NAME=$(ls pdfsam*.jar | cut -d '/' -f 2)
-#######################################
 
-echo "starting ${JAVA_PROGRAM_DIR}java -jar ${PROGRAM_DIR}/${STARTJAR_NAME} "
-${JAVA_PROGRAM_DIR}java -Djdk.gtk.version=2 --module-path $PATH_TO_FX --add-modules=javafx.controls -jar ${PROGRAM_DIR}/${STARTJAR_NAME} 
+function run() {
+  cmd="java -jar ${TARGET_DIR}/${PROGRAM}-${VERSION}-linux/${PROGRAM}-basic-${VERSION}.jar"
+  echo $cmd
+  eval $cmd
+}
+
+function update() {
+  if [ ! -d ${TARGET_DIR}/${PROGRAM}-${VERSION}-linux ]; then
+    echo "updating ${PROGRAM}"
+    if [ ! -f ${HOME}/Downloads/${PROGRAM}-${VERSION}-linux.tar.gz ]; then
+      wget -O ${HOME}/Downloads/${PROGRAM}-${VERSION}-linux.tar.gz https://github.com/torakiki/pdfsam/releases/download/v${VERSION}/pdfsam-${VERSION}-linux.tar.gz
+    fi  
+    tar -xzf ${HOME}/Downloads/${PROGRAM}-${VERSION}-linux.tar.gz -C ${TARGET_DIR}
+  fi
+}
+
+# main
+export TARGET_DIR="/home/share"
+export VERSION=4.3.4
+export PROGRAM=pdfsam
+
+#main
+update
+run
